--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,11 +24,11 @@ jobs:
         cd linux
         npm install && npm install hexo-cli -g
         hexo clean && hexo generate
-        mv public ../public/linux
+        cp -ravx public ../public/linux
         cd ../android
         npm install && npm install hexo-cli -g
         hexo clean && hexo generate
-        mv public ../public/android
+        cp -ravx public ../public/android
     - name: Commit files
       run: |
         cd public
